// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component/Button Default 1`] = `
<button
  className="ui grey button"
  onClick={[Function]}
>
  Button1
</button>
`;

exports[`Storyshots Component/Input Default 1`] = `
<div
  className="ui input"
>
  <input
    name={null}
    onChange={[Function]}
    placeholder="Input1"
    type="text"
  />
</div>
`;

exports[`Storyshots Component/Loader Default 1`] = `
<div
  className="ui active transition visible dimmer"
  onClick={[Function]}
>
  <div
    className="content"
  >
    <div
      className="ui loader"
    />
  </div>
</div>
`;

exports[`Storyshots Component/Pagination Default 1`] = `
<div
  aria-label="Pagination Navigation"
  className="ui pagination menu"
  role="navigation"
>
  <a
    aria-current={false}
    aria-disabled={false}
    aria-label="First item"
    className="item"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
    type="firstItem"
    value={1}
  >
    «
  </a>
  <a
    aria-current={false}
    aria-disabled={false}
    aria-label="Previous item"
    className="item"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
    type="prevItem"
    value={1}
  >
    ⟨
  </a>
  <a
    aria-current={true}
    aria-disabled={false}
    className="active item"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
    type="pageItem"
    value={1}
  >
    1
  </a>
  <a
    aria-current={false}
    aria-disabled={false}
    className="item"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
    type="pageItem"
    value={2}
  >
    2
  </a>
  <a
    aria-current={false}
    aria-disabled={false}
    className="item"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
    type="pageItem"
    value={3}
  >
    3
  </a>
  <a
    aria-current={false}
    aria-disabled={false}
    className="item"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
    type="pageItem"
    value={4}
  >
    4
  </a>
  <a
    aria-current={false}
    aria-disabled={false}
    className="item"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
    type="pageItem"
    value={5}
  >
    5
  </a>
  <a
    aria-current={false}
    aria-disabled={true}
    className="item"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={-1}
    type="ellipsisItem"
    value={6}
  >
    ...
  </a>
  <a
    aria-current={false}
    aria-disabled={false}
    className="item"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
    type="pageItem"
    value={10}
  >
    10
  </a>
  <a
    aria-current={false}
    aria-disabled={false}
    aria-label="Next item"
    className="item"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
    type="nextItem"
    value={2}
  >
    ⟩
  </a>
  <a
    aria-current={false}
    aria-disabled={false}
    aria-label="Last item"
    className="item"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
    type="lastItem"
    value={10}
  >
    »
  </a>
</div>
`;

exports[`Storyshots Component/Select Default 1`] = `
<div
  aria-expanded={false}
  className="ui selection dropdown"
  name={null}
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="listbox"
  tabIndex={0}
>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="divider default text"
    role="alert"
  >
    Select
  </div>
  <i
    aria-hidden="true"
    className="dropdown icon"
    onClick={[Function]}
  />
  <div
    className="menu transition"
  >
    <div
      aria-checked={false}
      aria-selected={true}
      className="selected item"
      onClick={[Function]}
      role="option"
      style={
        Object {
          "pointerEvents": "all",
        }
      }
    >
      <span
        className="text"
      >
        option 1
      </span>
    </div>
    <div
      aria-checked={false}
      aria-selected={false}
      className="item"
      onClick={[Function]}
      role="option"
      style={
        Object {
          "pointerEvents": "all",
        }
      }
    >
      <span
        className="text"
      >
        option 2
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component/Table Default 1`] = `
Array [
  <table
    className="ui celled table"
  >
    <thead
      className=""
    >
      <tr
        className=""
      >
        <th
          className=""
        >
          Header1
        </th>
        <th
          className=""
        >
          Header2
        </th>
        <th
          className=""
        >
          Header3
        </th>
      </tr>
    </thead>
    <tbody
      className=""
    >
      <tr
        className=""
      >
        <td
          className=""
        >
          value1
        </td>
        <td
          className=""
        >
          value1
        </td>
        <td
          className=""
        >
          value1
        </td>
      </tr>
      <tr
        className=""
      >
        <td
          className=""
        >
          value2
        </td>
        <td
          className=""
        >
          value2
        </td>
        <td
          className=""
        >
          value2
        </td>
      </tr>
      <tr
        className=""
      >
        <td
          className=""
        >
          value3
        </td>
        <td
          className=""
        >
          value3
        </td>
        <td
          className=""
        >
          value3
        </td>
      </tr>
    </tbody>
  </table>,
  <div
    aria-label="Pagination Navigation"
    className="ui pagination menu"
    role="navigation"
  >
    <a
      aria-current={false}
      aria-disabled={false}
      aria-label="First item"
      className="item"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
      type="firstItem"
      value={1}
    >
      «
    </a>
    <a
      aria-current={false}
      aria-disabled={false}
      aria-label="Previous item"
      className="item"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
      type="prevItem"
      value={1}
    >
      ⟨
    </a>
    <a
      aria-current={true}
      aria-disabled={false}
      className="active item"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
      type="pageItem"
      value={1}
    >
      1
    </a>
    <a
      aria-current={false}
      aria-disabled={false}
      className="item"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
      type="pageItem"
      value={2}
    >
      2
    </a>
    <a
      aria-current={false}
      aria-disabled={false}
      className="item"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
      type="pageItem"
      value={3}
    >
      3
    </a>
    <a
      aria-current={false}
      aria-disabled={false}
      className="item"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
      type="pageItem"
      value={4}
    >
      4
    </a>
    <a
      aria-current={false}
      aria-disabled={false}
      className="item"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
      type="pageItem"
      value={5}
    >
      5
    </a>
    <a
      aria-current={false}
      aria-disabled={true}
      className="item"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={-1}
      type="ellipsisItem"
      value={6}
    >
      ...
    </a>
    <a
      aria-current={false}
      aria-disabled={false}
      className="item"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
      type="pageItem"
      value={10}
    >
      10
    </a>
    <a
      aria-current={false}
      aria-disabled={false}
      aria-label="Next item"
      className="item"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
      type="nextItem"
      value={2}
    >
      ⟩
    </a>
    <a
      aria-current={false}
      aria-disabled={false}
      aria-label="Last item"
      className="item"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
      type="lastItem"
      value={10}
    >
      »
    </a>
  </div>,
]
`;
